app/jenkins/traefik.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: jenkins
  namespace: beta
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`jenkins.lzone.cf`)
      kind: Rule
      services:
        - name: jenkins
          port: 80
  tls:
    certResolver: myresolver
